--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,9 +145,9 @@ jobs:
 
     strategy:
       matrix:
-        VERSION: [21.02, 23.05]
+        VERSION: [23.05]
         CPU: [rk3328, rk3528, rk3399, rk3566, rk3568, rk3588]
-        SET: [docker, non-docker]
+        SET: [non-docker]
     steps:
     - name: Checkout
       uses: actions/checkout@main
