--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,8 @@ jobs:
         repo sync -c scripts --no-clone-bundle
         repo sync -c scripts/sd-fuse  --no-clone-bundle
         repo sync -c toolchain  --no-clone-bundle
+        (cd kernel && git checkout nanopi6-v6.1.y)
+        (cd scripts/sd-fuse && git checkout master)
 
     - name: Apply customizations
       run: |
